--- a/ThienNga2/Views/Warranty/allIMEI.cshtml
+++ b/ThienNga2/Views/Warranty/allIMEI.cshtml
@@ -34,7 +34,7 @@
                     <th>Mã xuất kho</th>
                     <th>Ngày kích hoạt</th>
                     <th>Mã IMEI</th>
-                    <th>Mã sản phẩm</th>
+                    <th>SKU</th>
                     <th>Tên sản phẩm</th>
                     <th>Tên khách hàng</th>
                     <th>SDT khách hàng</th>
