--- a/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
+++ b/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
@@ -43,12 +43,24 @@
                         <td>
                            @wact.date
                         </td>
+                        @if (wact.tb_customer != null) {
+                       
                         <td>
                             @wact.tb_customer.customerName
                         </td>
                         <td>
                             @wact.tb_customer.id
                         </td>
+                        }
+                        else
+                        {
+                            <td>
+                                Không có lưu
+                            </td>
+                            <td>
+                                Không có lưu
+                            </td>
+                        }
                         <td>
                             @wact.total
                         </td>
