--- a/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
+++ b/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
@@ -63,7 +63,7 @@
                             </td>
                         }
                         <td>
-                            @Convert.ToDecimal(wact.total).ToString("#,##0");
+                            @Convert.ToDecimal(wact.total).ToString("#,##0")
                             
                         </td>
                         <td>
