--- a/ThienNga2/Views/ProductItem/ConfirmNewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/ConfirmNewProductItem.cshtml
@@ -68,7 +68,7 @@
                 <td> @dongiaS </td>
                 <td > @(ao.chietKhauPhanTram + "")</td>
                 <td>  @chietkhauttS</td>
-                <td>  @thanhtS</td>
+                <td>  @ao.thanhTienS</td>
             </tr>
             }
         }
