--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -36,16 +36,23 @@
         function checkHidden() {
             for (i = 1 ; i < 20; i++) {
            
-                if ($('#items_' + (i - 1) + '__SKU').val() == "") {
+                if ($('#items_' + (i - 1) + '__SKU').val() == "" && $('#items_' + (i - 1) + '__newSKU').val() == "") {
                     $('#items_' + (i - 1) + '__SKU').css("background-color", "white");
                     $('#divid' + i).hide();
                 }
                 else {
-                    if ($('#items_' + (i - 1) + '__SKU').val() != temp[i - 1]) {
+                    if ($('#items_' + (i - 1) + '__SKU').val() != temp[i - 1] && $('#items_' + (i - 1) + '__SKU').val().length > 0) {
                         temp[i - 1] = $('#items_' + (i - 1) + '__SKU').val();
                         checkPrice($('#items_' + (i - 1) + '__SKU').val(), i);
                     }
-                    updatePrice(i);
+                    if ($('#items_' + (i - 1) + '__SKU').val().length > 0) {
+                        updatePrice(i);
+                    }
+                    if ($('#items_' + (i - 1) + '__newSKU').val().length > 0) {
+                        updatePrice2(i);
+                    }
+
+                    
                     $('#divid' + i).show();
                 }
             }
@@ -66,6 +73,15 @@
             temp3 = Math.floor(temp3);
             $('#items_' + (index - 1) + '__thanhTienS').val(numberWithCommas(temp3));
             $('#items_' + (index - 1) + '__thanhTien').val(temp3);
+        }
+        function updatePrice2(index) {
+      
+            var temp =  $('#items_' + (index - 1) + '__thanhTienS').val();
+            while(temp.indexOf(",") >0) {
+                temp = temp.replace(',', '');
+            }
+            $('#items_' + (index - 1) + '__thanhTienS').val(numberWithCommas(temp));
+
         }
         var currentsdt = "";
         function checkCus() {
@@ -112,14 +128,14 @@
                     }
                 })
             });
-            if (!flag) {
+            if (!flag && $('#items_' + (index - 1) + '__SKU').VAL() != null) {
                 $('#items_' + (index - 1) + '__SKU').css("background-color", "orange");
                 $('input[type="submit"]').prop('disabled', true);
                 $('#items_' + (index - 1) + '__SKU').css("color", "white");
             }
         };
         $(document).ready(function () {
-            $('input[type="submit"]').prop('disabled', true);
+        
             for (i = 0; i < 20 ; i++) {
                 $('#items_' + (i ) + '__SKU').autocomplete({
 
@@ -209,6 +225,9 @@
                             <tr id="@idd">
                                 <td >
                                     <label>Tên/Mã nhà máy/SKU @Html.TextBoxFor(Model => Model.items[i].SKU, new { @class = "form-control" })</label>
+                                </td>
+                                <td>
+                                    <label>Mã sản phẩm chưa lưu @Html.TextBoxFor(Model => Model.items[i].newSKU, new { @class = "form-control" })</label>
                                 </td>
                                 <td>
 
